[package]
name = "clam5"
version = "0.1.0"
authors = ["khyperia <khyperia@live.com>"]
edition = "2018"
resolver = "2"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cgmath = "*"
chrono = { version = "*", default-features = false, features = ["clock"] }
glam = "*"
hdrldr = "*"
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
png = { version = "*", default-features = false, features = ["png-encoding"] }
wgpu = "*"
wgpu_glyph = "*"
winit = { version = "*", default-features = false, features = ["x11"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = { version = "*", default-features = false }
pollster = "*"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "*"
web-sys = { version = "*",  features = ["HtmlCanvasElement"] }
console_error_panic_hook = "*"
wasm-bindgen-futures = "*"
console_log = { version = "*", features = ["color"] }
wgpu = "*"
