[package]
name = "clam5"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
cgmath = "*"
chrono = { version = "*", default-features = false, features = ["clock"] }
glam = "*"
hdrldr = "*"
instant = { version = "0.1", features = [ "wasm-bindgen", "inaccurate" ] }
log = "*"
png = { version = "*", default-features = false, features = ["png-encoding"] }
wgpu = "*"
wgpu_text = "*"
winit = { version = "*", default-features = false, features = ["x11", "rwh_06"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = "*"

[workspace]
members = [
    "native",
    "wasm",
]
default-members = ["native"]
